Separate Role on two different types: ResourceRole, RowLevelRole Haulmont/jmix-security#43

--- a/content/io/jmix/securitydata/messages.properties
+++ b/content/io/jmix/securitydata/messages.properties
@@ -1,15 +1,19 @@
-
-io.jmix.securitydata.entity/RoleEntity=Role entity
-io.jmix.securitydata.entity/RoleEntity.name=Name
-io.jmix.securitydata.entity/RoleEntity.code=Code
-io.jmix.securitydata.entity/RoleEntity.roleType=Role type
-io.jmix.securitydata.entity/RoleEntity.rowLevelPolicies=Row level policies
-io.jmix.securitydata.entity/RoleEntity.resourcePolicies=Resource policies
-io.jmix.securitydata.entity/RoleEntity.childRoles=Child roles
-io.jmix.securitydata.entity/RoleEntity.sysTenantId=Tenant Id
+io.jmix.securitydata.entity/ResourceRoleEntity=Role entity
+io.jmix.securitydata.entity/ResourceRoleEntity.name=Name
+io.jmix.securitydata.entity/ResourceRoleEntity.code=Code
+io.jmix.securitydata.entity/ResourceRoleEntity.resourcePolicies=Resource policies
+io.jmix.securitydata.entity/ResourceRoleEntity.childRoles=Child roles
+io.jmix.securitydata.entity/ResourceRoleEntity.sysTenantId=Tenant Id
+io.jmix.securitydata.entity/RowLevelRoleEntity=Role entity
+io.jmix.securitydata.entity/RowLevelRoleEntity.name=Name
+io.jmix.securitydata.entity/RowLevelRoleEntity.code=Code
+io.jmix.securitydata.entity/RowLevelRoleEntity.rowLevelPolicies=Row level policies
+io.jmix.securitydata.entity/RowLevelRoleEntity.childRoles=Child roles
+io.jmix.securitydata.entity/RowLevelRoleEntity.sysTenantId=Tenant Id
 io.jmix.securitydata.entity/RoleAssignmentEntity=Role assignment
 io.jmix.securitydata.entity/RoleAssignmentEntity.username=Username
 io.jmix.securitydata.entity/RoleAssignmentEntity.roleCode=Role code
+io.jmix.securitydata.entity/RoleAssignmentEntity.roleType=Role type
 io.jmix.securitydata.entity/RowLevelPolicyEntity=Row level policy
 io.jmix.securitydata.entity/RowLevelPolicyEntity.type=Type
 io.jmix.securitydata.entity/RowLevelPolicyEntity.resource=Resource
