Separate Role on two different types: ResourceRole, RowLevelRole Haulmont/jmix-security#43
Separate role assignment edit action

--- a/content/io/jmix/securityui/messages.properties
+++ b/content/io/jmix/securityui/messages.properties
@@ -65,8 +65,10 @@ io.jmix.securityui.screen.resourcepolicy/allAttributes=All attributes (*)
 io.jmix.securityui.screen.resourcepolicy/allScreens=All screens (*)
 io.jmix.securityui.screen.resourcepolicy/allMenus=All menus (*)
 io.jmix.securityui.screen.roleassignment/roleName=Role name
-io.jmix.securityui.screen.roleassignment/addResourceRole=Add Resource Role
-io.jmix.securityui.screen.roleassignment/addRowLevelRole=Add Row Level Role
+io.jmix.securityui.screen.roleassignment/RoleAssignmentScreen.caption=Role assignments for %s
+io.jmix.securityui.screen.roleassignment/resourceRoles=Resource Roles
+io.jmix.securityui.screen.roleassignment/rowLevelRoles=Row Level Roles
+
 io.jmix.securityui.model/roleSource.database=Database
 io.jmix.securityui.model/roleSource.annotatedClass=Annotated class
 io.jmix.securityui.model/ResourceRoleModel.code=Code
@@ -97,3 +99,15 @@ io.jmix.securityui.screen.resourcepolicy/AttributeResourceModel.view=View
 io.jmix.securityui.screen.resourcepolicy/AttributeResourceModel.modify=Modify
 io.jmix.securityui/menu.sec_ResourceRoleModel.browse=Resource Roles
 io.jmix.securityui/menu.sec_RowLevelRoleModel.browse=Row Level Roles
+
+actions.ShowRoleAssignments=Role assignments
+actions.changePassword=Change password
+
+changePasswordDialog.currentPassword=Current password
+changePasswordDialog.password=New Password
+changePasswordDialog.confirmPassword=Confirm New Password
+changePasswordDialog.captionWithUserName=Change password for user '%s'
+changePasswordDialog.wrongCurrentPassword=Wrong current password
+changePasswordDialog.currentPasswordWarning=Password must not be equal to the current password
+changePasswordDialog.passwordsDoNotMatch=Passwords don't match
+changePasswordDialog.passwordChanged=Password successfully changed
