Changes after code review Haulmont/jmix-ui#170
1. Rename modules:
	ui-charts -> charts
	ui-charts-starter -> charts-starter
	ui-pivot-table -> pivot-table
	ui-pivot-table-starter -> pivot-table-starter
2. Remove module 'ui-charts-common': classes are copied to 'charts' and 'pivot-table' modules
3. Update namespace for the pivot-table scheme in pivot-table-fragment.xml and pivot-table-screen.xml descriptors
4. Move fix from https://github.com/cuba-platform/charts/issues/104
5. Update dependencies versions
6. Rename model implementation classes in 'charts' module (e.g. AngularGaugeChart -> AngularGaugeChartModelImpl)

--- a/content/io/jmix/charts/messages.properties
+++ b/content/io/jmix/charts/messages.properties
@@ -13,7 +13,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
 boolean.yes = Yes
 boolean.no = No
 
@@ -59,7 +58,7 @@ amcharts.shortMonthNames.OCTOBER = Oct
 amcharts.shortMonthNames.NOVEMBER = Nov
 amcharts.shortMonthNames.DECEMBER = Dec
 
-# Do not localize! It should be a value of io.jmix.uicharts.model.date.DayOfWeek enum.
+# Do not localize! It should be a value of io.jmix.charts.model.date.DayOfWeek enum.
 amcharts.firstDayOfWeek = SUNDAY
 
 amcharts.bigNumberPower.KILO = k
@@ -120,4 +119,4 @@ menu.label.draw.modes.line = Line
 menu.label.draw.modes.arrow = Arrow
 label.saved.from = Saved from:
 
-io.jmix.uicharts.screen/screenCaption=Chart
+io.jmix.charts.screen/screenCaption=Chart
