--- a/content/io/jmix/pivottable/messages.properties
+++ b/content/io/jmix/pivottable/messages.properties
@@ -109,6 +109,6 @@ actions.showPivotAction.dialogMessage=Do you want to export only selected rows?
 
 actions.showPivotAction.caption=Show pivot table
 
-io.jmix.uipivottable.screen/showPivotScreenCaption = Pivot table
-io.jmix.uipivottable.screen/exportExcel = Excel
-io.jmix.uipivottable.screen/screenCaption=Chart
+io.jmix.pivottable.screen/showPivotScreenCaption = Pivot table
+io.jmix.pivottable.screen/exportExcel = Excel
+io.jmix.pivottable.screen/screenCaption=Chart
