Implement "Reset password" action #27

--- a/content/io/jmix/securityui/messages.properties
+++ b/content/io/jmix/securityui/messages.properties
@@ -102,6 +102,7 @@ io.jmix.securityui/menu.sec_ResourceRoleModel.browse=Resource roles
 io.jmix.securityui/menu.sec_RowLevelRoleModel.browse=Row-level roles
 actions.showRoleAssignments=Role assignments
 actions.changePassword=Change password
+actions.resetPassword=Reset passwords
 actions.resetRememberMeToken=Reset 'remember me' tokens
 resetRememberMeResetDialog.resetRememberMeCompleted='Remember me' tokens have been removed
 resetRememberMeResetDialog.resetRememberMeQuestion=Reset tokens for all users?
@@ -116,3 +117,14 @@ changePasswordDialog.wrongCurrentPassword=Wrong current password
 changePasswordDialog.currentPasswordWarning=Password must not be equal to the current password
 changePasswordDialog.passwordsDoNotMatch=Passwords don't match
 changePasswordDialog.passwordChanged=Password successfully changed
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.resetPasswordsSummary=System will suggest to change password to selected users on next logon
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.additionalOptions=Additional options:
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.generatePasswordsCheckBox=Generate new random password
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.sendEmailsCheckbox=Send email with password
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.newPasswordsCaption=New passwords
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.printPasswords=Generated passwords will be shown in new window, you will be able to export password list to Excel
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.sendPasswords=Generated passwords will be sent to users via e-mail
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.resetPasswordCompleted=Password reset is scheduled for %s users
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.changePasswordAtLogonCompleted=Applied to %s users
+io.jmix.securityui.screen.resetpassword/UserPasswordModel.password=New password
+io.jmix.securityui.screen.resetpassword/UserPasswordModel.userName=Login
