--- a/content/io/jmix/securityui/messages_ru.properties
+++ b/content/io/jmix/securityui/messages_ru.properties
@@ -101,6 +101,7 @@ io.jmix.securityui/menu.sec_ResourceRoleModel.browse=Ресурсные роли
 io.jmix.securityui/menu.sec_RowLevelRoleModel.browse=Row-level роли
 actions.showRoleAssignments=Назначения ролей
 actions.changePassword=Сменить пароль
+actions.resetPassword=Сброс паролей
 actions.resetRememberMeToken=Сбросить токены 'remember me'
 resetRememberMeResetDialog.resetRememberMeCompleted=Токены 'Remember me' удалены
 resetRememberMeResetDialog.resetRememberMeQuestion=Сбросить токены для всех пользователей?
@@ -115,3 +116,12 @@ changePasswordDialog.wrongCurrentPassword=Текущий пароль невер
 changePasswordDialog.currentPasswordWarning=Пароль не должен быть таким же как текущий
 changePasswordDialog.passwordsDoNotMatch=Пароли не совпадают
 changePasswordDialog.passwordChanged=Пароль успешно изменен
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.additionalOptions=Дополнительные опции:
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.sendEmailsCheckbox=Выслать пароль на e-mail
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.generatePasswordsCheckBox=Сгенерировать случайный пароль для следующего входа
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.newPasswordsCaption=Новые пароли пользователей
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.resetPasswordsSummary=Выбранным пользователям будет предложено сменить пароль при входе в систему
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.printPasswords=Сгенерированные пароли будут показаны в новом окне, вы сможете экспортировать их в Excel
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.sendPasswords=Сгенерированные пароли будут отправлены пользователям по e-mail
+io.jmix.securityui.screen.resetpassword/UserPasswordModel.password=Новый пароль
+io.jmix.securityui.screen.resetpassword/ResetPasswordDialog.login=Логин
