Fix according to long/short project id #40

--- a/content/io/jmix/dynattrui/messages.properties
+++ b/content/io/jmix/dynattrui/messages.properties
@@ -1,5 +1,5 @@
 
-menu-config.sys_Category.browse=Dynamic Attributes
+menu-config.dynat_Category.browse=Dynamic Attributes
 
 # CategoryBrowse
 io.jmix.dynattrui.screen.category/browseCaption=Dynamic Attributes
