--- a/content/io/jmix/dynattrui/messages_ru.properties
+++ b/content/io/jmix/dynattrui/messages_ru.properties
@@ -1,5 +1,5 @@
 
-menu-config.sys_Category.browse=Динамические атрибуты
+menu-config.dynat_Category.browse=Динамические атрибуты
 
 # CategoryBrowse
 io.jmix.dynattrui.screen.category/browseCaption=Динамические атрибуты
