Unexpected error after changing user's password to null #61

--- a/content/io/jmix/securityui/messages.properties
+++ b/content/io/jmix/securityui/messages.properties
@@ -109,6 +109,7 @@ resetRememberMeResetDialog.resetRememberMeTitle=Reset 'remember me' tokens for u
 resetRememberMeResetDialog.ResetAll=Reset for all
 resetRememberMeResetDialog.ResetOptionSelected=For selected
 changePasswordDialog.currentPassword=Current password
+changePasswordDialog.passwordRequired=Password can not be blank
 changePasswordDialog.password=New password
 changePasswordDialog.confirmPassword=Confirm new password
 changePasswordDialog.captionWithUserName=Change password for user '%s'
