--- a/content/io/jmix/securityui/messages_ru.properties
+++ b/content/io/jmix/securityui/messages_ru.properties
@@ -109,6 +109,7 @@ resetRememberMeResetDialog.ResetAll=Сбросить для всех
 resetRememberMeResetDialog.ResetOptionSelected=Для выбранных
 changePasswordDialog.currentPassword=Текущий пароль
 changePasswordDialog.password=Новый пароль
+changePasswordDialog.passwordRequired=Пустой пароль недопустим
 changePasswordDialog.confirmPassword=Подтвердить новый пароль
 changePasswordDialog.captionWithUserName=Сменить пароль для пользователя '%s'
 changePasswordDialog.wrongCurrentPassword=Текущий пароль неверен
